--- a/d-fresh-mart/src/Pages/Home/Discount/Discount.css
+++ b/d-fresh-mart/src/Pages/Home/Discount/Discount.css
@@ -1,5 +1,6 @@
 .containers {
   width: 100%;
+  padding: 20px;
 }
 
 .discount {
@@ -7,8 +8,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  position: relative;
-  background-color: lightgrey;
+  margin: 20px 0;
 }
 
 .discount .discount-card {
