--- a/d-fresh-mart/src/Pages/Home/Logo/Logo.css
+++ b/d-fresh-mart/src/Pages/Home/Logo/Logo.css
@@ -43,7 +43,7 @@
 .input-wrapper button {
   padding: 8px 16px;
   border: none;
-  background-color: #4caf50;
+  background-color: green;
   color: white;
   border-radius: 0 4px 4px 0;
   cursor: pointer;
@@ -71,5 +71,5 @@
 }
 
 .button-list li a :hover {
-  background-color: rgb(8, 163, 124);
+  background-color: green;
 }
