--- a/d-fresh-mart/src/Pages/Home/ProductList/ProductList.css
+++ b/d-fresh-mart/src/Pages/Home/ProductList/ProductList.css
@@ -2,6 +2,8 @@
   float: left;
   width: 100%;
   overflow: hidden;
+  background-color: rgb(232, 229, 229);
+  padding: 10px;
 }
 
 .product-card {
@@ -9,18 +11,17 @@
   width: 15%;
   border: none;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(20, 139, 219, 0.1);
+  box-shadow: 0 2px 4px black !important;
   margin: 12px;
   padding: 10px;
-
-  background-color: rgba(198, 64, 64, 0.881);
+  background-color: white !important;
 }
 
 .product-card img {
   width: 100%;
   transition: transform 0.3s ease;
   padding: 20px;
-  border: 2px solid rgb(152, 144, 144);
+  border: 1px solid rgb(198, 194, 194);
   border-radius: 10px;
 }
 .product-card img:hover {
@@ -51,4 +52,8 @@
   padding: 5px;
   color: green;
   background-color: white;
+}
+.product-card button:hover {
+  background-color: green;
+  color: white;
 }
