--- a/d-fresh-mart/src/Pages/Home/ProductSlide/ProductSlide.css
+++ b/d-fresh-mart/src/Pages/Home/ProductSlide/ProductSlide.css
@@ -14,57 +14,67 @@
   margin-bottom: 20px;
   color: #2b2b2b;
 }
-
-.product-card {
-  background: #a19f9f;
+.products-list-page {
+  float: left;
+  gap: 20px;
+}
+.products-card {
+  float: left;
+  background-color: lightgray;
   border: 1px solid #ddd;
   border-radius: 12px;
   padding: 15px;
-  margin: 10px;
+  margin: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   text-align: center;
   transition: transform 0.3s ease;
+  height: 70vh;
 }
 
-.product-card:hover {
+.products-card:hover {
   transform: translateY(-5px);
 }
 
-.product-card img {
+.products-card img {
   width: 100%;
   height: 180px;
   object-fit: cover;
+
   border-radius: 10px;
   margin-bottom: 10px;
 }
 
-.product-card h3 {
+.products-card h3 {
   font-size: 1.1rem;
   margin: 10px 0;
   color: #333;
+  text-align: left;
 }
 
-.product-card h6 {
+.products-card h5 {
   color: #777;
   margin: 5px 0;
+  font-size: medium;
+  text-align: left;
 }
 
-.product-card p {
+.products-card h6 {
   font-weight: bold;
-  color: #2e8b57;
+  text-align: left;
 }
 
-.product-card button {
-  margin-top: 10px;
-  background-color: #2e8b57;
+.products-card button {
+  background-color: green;
   color: white;
   border: none;
   padding: 8px 16px;
   border-radius: 6px;
   cursor: pointer;
-  transition: background 0.3s ease;
+  float: left;
+  margin-top: 70px;
 }
 
-.product-card button:hover {
-  background-color: #246f48;
+.products-card button:hover {
+  background-color: white;
+  color: green;
 }
