--- a/d-fresh-mart/src/Pages/Home/SlideCarousel/SlideCarousel.css
+++ b/d-fresh-mart/src/Pages/Home/SlideCarousel/SlideCarousel.css
@@ -1,8 +1,8 @@
 .slider-wrapper {
-  width: 90%;
-  margin: auto;
-  text-align: center;
-  padding: 10px 0;
+  margin: 20px auto;
+  width: 100%;
+  float: none;
+  max-width: 90%;
 }
 
 .slider-wrapper h1 {
@@ -12,11 +12,11 @@
 }
 
 .slider-item {
-  padding: 10px;
+  padding: 5px; /* Reduce this from 10px to 5px or even 0px */
 }
 
 .slider-item figure {
-  width: 50%;
+  width: 100%;
   height: 200px;
   border-radius: 12px;
   overflow: hidden;
