--- a/d-fresh-mart/src/Pages/Home/TopHeader/TopHeader.css
+++ b/d-fresh-mart/src/Pages/Home/TopHeader/TopHeader.css
@@ -1,12 +1,12 @@
 .TopHeader {
   float: left;
   width: 100%;
-  background-color: rgb(66, 220, 66);
+  background-color: green;
   color: white;
   padding: 10px;
 }
 .TopHeader h4 {
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 400;
 }
 .TopHeaderLeft {
