--- a/d-fresh-mart/src/Pages/Product/Expense/Expenses.css
+++ b/d-fresh-mart/src/Pages/Product/Expense/Expenses.css
@@ -4,25 +4,26 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  background-color: green;
 }
 .expense-card {
   float: left;
 
-  width: 18%;
+  width: 25%;
   margin: 50px 10px;
-  border: 1px solid #787777;
+  border: none;
   border-radius: 5px;
   padding: 20px;
 }
 .expense-left {
   float: left;
   width: 20%;
-  text-align: center;
+  text-align: left;
 }
 .icon {
   font-size: 30px;
-  border: 3px solid green;
-  color: green;
+  border: 3px solid white;
+  color: white;
   padding: 5px;
   border-radius: 50%;
   width: 30px;
@@ -30,8 +31,11 @@
 .expense-right h5 {
   font-size: medium;
   font-weight: 700;
+  color: white;
+  text-align: left;
 }
 .expense-right h6 {
-  color: rgb(150, 148, 148);
+  color: white;
   font-weight: 400;
+  text-align: left;
 }
