--- a/d-fresh-mart/src/index.css
+++ b/d-fresh-mart/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 @import "bootstrap/dist/css/bootstrap.min.css";
 code {
